--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,6 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Plandit.MainPage">
 
+    <ContentPage.Resources>
+        <StyleSheet Source="/Resources/Styles/MainPage.css" />
+    </ContentPage.Resources>
+
     <ScrollView>
         <VerticalStackLayout
             Spacing="25"
