--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -13,6 +13,13 @@
             Padding="30,0"
             VerticalOptions="Center">
 
+            <Button
+                x:Name="CounterBtn"
+                Text="Project Name"
+                SemanticProperties.Hint="Counts the number of times you click"
+                Clicked="OnCounterClicked"
+                HorizontalOptions="Center" />
+
             <Image
                 Source="dotnet_bot.png"
                 SemanticProperties.Description="Cute dot net bot waving hi to you!"
@@ -32,12 +39,7 @@
                 FontSize="18"
                 HorizontalOptions="Center" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+            
 
         </VerticalStackLayout>
     </ScrollView>
