--- a/Resources/Styles/Styles.xaml
+++ b/Resources/Styles/Styles.xaml
@@ -14,9 +14,17 @@
     </Style>
 
     <Style TargetType="Border">
-        <Setter Property="Stroke" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource ExowebLightItem}, Dark={StaticResource ExowebDarkItem}}" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="VerticalOptions" Value="StartAndExpand" />
+        <Setter Property="HorizontalOptions" Value="FillAndExpand" />
         <Setter Property="StrokeShape" Value="Rectangle"/>
-        <Setter Property="StrokeThickness" Value="1"/>
+        <Setter Property="StrokeThickness" Value="0"/>
+        <Setter Property="StrokeShape">
+            <Setter.Value>
+                <RoundRectangle CornerRadius="8" />
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style TargetType="BoxView">
@@ -136,6 +144,7 @@
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource ExowebLightItem}, Dark={StaticResource ExowebDarkItem}}" />
         <Setter Property="BorderColor" Value="{AppThemeBinding Light={StaticResource ExowebLightBackground}, Dark={StaticResource ExowebDarkBackground}}" />
         <Setter Property="CornerRadius" Value="8" />
+        <Setter Property="Padding" Value="0" />
     </Style>
 
     <Style TargetType="ImageButton">
