--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -89,7 +89,7 @@
                                             Padding="8" >
 
                                             <Label 
-                                                Text="{Binding TaskItem}" 
+                                                Text="{Binding TaskTitle}" 
                                                 x:Name="TaskItem" 
                                                 VerticalOptions="CenterAndExpand"
                                                 HorizontalOptions="StartAndExpand" />
