Press button to access task list
Saving before attempting to create a new storage method that will store unique project tasks (todo lists)

--- a/Resources/Styles/Styles.xaml
+++ b/Resources/Styles/Styles.xaml
@@ -39,8 +39,9 @@
         <Setter Property="CornerRadius" Value="5"/>
         <Setter Property="Padding" Value="10"/>
         <Setter Property="MinimumHeightRequest" Value="44"/>
+        <Setter Property="MaximumHeightRequest" Value="100" />
         <Setter Property="MinimumWidthRequest" Value="44"/>
-        <Setter Property="MaximumWidthRequest" Value="150" />
+        <Setter Property="MaximumWidthRequest" Value="300" />
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
