--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -16,105 +16,6 @@
     Step 6: Create push notifications
     Step 7: Beautify folders to represemt projects (Deadline / Desc / Progress / Milestones) -->
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <Border
-            Grid.Row="0"
-            Margin="10, 5" 
-            Padding="8" >
-
-            <VerticalStackLayout>
-                <Label Text="Project Title" />
-                <Label Text="Project Deadline" />
-            </VerticalStackLayout>
-        </Border>
-
-        <Border
-            Grid.Row="1"
-            Margin="10, 5"
-            Padding="8" >
-
-            <VerticalStackLayout>
-                <Label Text="Project Description" />
-                <Label Text="Well this project is just a text that will hopefully represent exactly how a fully set up project will look. An important part is making sure that this row can be scrolled away from because it's a bit obnoxious to have a big ol description box like this constantly in your face." />
-            </VerticalStackLayout>
-        </Border>
-
-        <Border
-            Grid.Row="2"
-            Margin="10, 5" >
-
-            <ScrollView>
-
-                <StackLayout
-                    VerticalOptions="StartAndExpand"
-                    Spacing="25"
-                    Padding="30, 30">
-
-                    <Entry 
-                        x:Name="taskEntry" 
-                        Placeholder="New Todo" />
-
-                    <Button 
-                        Text="Add Todo" 
-                        Clicked="AddTaskOnClick" />
-
-                    <CollectionView 
-                        x:Name="todoListView" 
-                        CanReorderItems="True" >
-
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate>
-                                <Border>
-                                    
-                                    <Grid
-                                        Padding="0" 
-                                        BackgroundColor="{AppThemeBinding Light={StaticResource ExowebLightDecor}, Dark={StaticResource ExowebDarkDecor}}">
-
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="Auto" />
-                                        </Grid.ColumnDefinitions>
-
-                                        <Border
-                                            Grid.Column="0"
-                                            BackgroundColor="Transparent" 
-                                            StrokeThickness="0"
-                                            Padding="8" >
-
-                                            <Label 
-                                                Text="{Binding TaskTitle}" 
-                                                x:Name="TaskItem" 
-                                                VerticalOptions="CenterAndExpand"
-                                                HorizontalOptions="StartAndExpand" />
-                                        </Border>
-
-                                        <Border
-                                            Grid.Column="1"
-                                            BackgroundColor="Transparent" 
-                                            StrokeThickness="0" 
-                                            Padding="8" >
-
-                                            <Button 
-                                                Clicked="DeleteTaskOnClick" 
-                                                MaximumWidthRequest="200"
-                                                VerticalOptions="CenterAndExpand"
-                                                HorizontalOptions="CenterAndExpand" 
-                                                BackgroundColor="{AppThemeBinding Light={StaticResource ExowebLightAccent}, Dark={StaticResource ExowebDarkAccent}}" />
-                                        </Border>
-                                    </Grid>
-                                </Border>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
-                </StackLayout>
-            </ScrollView>
-        </Border>
-    </Grid>
+    <Button Text="Go to Todo List" Clicked="GoToTodoListPage" />
 
 </ContentPage>
