--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -16,6 +16,89 @@
     Step 6: Create push notifications
     Step 7: Beautify folders to represemt projects (Deadline / Desc / Progress / Milestones) -->
 
-    <Button Text="Go to Todo List" Clicked="GoToTodoListPage" />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+
+        <Label Text="Hello" />
+
+        <Border
+            Grid.Row="1"
+            Margin="10, 5" >
+
+            <ScrollView>
+
+                <StackLayout
+                    VerticalOptions="StartAndExpand"
+                    Spacing="25"
+                    Padding="30, 30">
+
+                    <Entry 
+                        x:Name="taskEntry" 
+                        Placeholder="New Todo" />
+
+                    <Button 
+                        Text="Add Todo" 
+                        Clicked="AddTaskOnClick" />
+
+                    <CollectionView 
+            x:Name="todoListView" 
+            CanReorderItems="True" >
+
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Border>
+
+                                    <Grid
+                            Padding="0" 
+                            BackgroundColor="{AppThemeBinding Light={StaticResource ExowebLightDecor}, Dark={StaticResource ExowebDarkDecor}}">
+
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <Border
+                                Grid.Column="0"
+                                BackgroundColor="Transparent" 
+                                StrokeThickness="0"
+                                Padding="8" >
+
+                                            <Label 
+                                    Text="{Binding TaskTitle}" 
+                                    x:Name="TaskItem" 
+                                    VerticalOptions="CenterAndExpand"
+                                    HorizontalOptions="StartAndExpand" />
+                                        </Border>
+
+                                        <Border
+                                Grid.Column="1"
+                                BackgroundColor="Transparent" 
+                                StrokeThickness="0" 
+                                Padding="8" >
+
+                                            <Button 
+                                    Clicked="DeleteTaskOnClick" 
+                                    MaximumWidthRequest="200"
+                                    VerticalOptions="CenterAndExpand"
+                                    HorizontalOptions="CenterAndExpand" 
+                                    BackgroundColor="{AppThemeBinding Light={StaticResource ExowebLightAccent}, Dark={StaticResource ExowebDarkAccent}}" />
+                                        </Border>
+
+                                        <Border>
+                                            <Button Text="Go to Todo List" Clicked="GoToProjectPage" />
+                                        </Border>
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </StackLayout>
+            </ScrollView>
+        </Border>
+    </Grid>
 
 </ContentPage>
